# Shopify-Bulk-Importer

./: .env.example  .env.test  .gitignore  .mcp.json  .pre-commit-config.yaml  ACTUAL_README.md  AI_SESSION_GUIDE.md  API_REFERENCE.md  CHANGELOG.md  CHECKLIST_INSTALASI.md  CLAUDE.md  CLEANUP_GUIDE.md  CODEBASE_OVERVIEW.md  CODEBASE_RESTRUCTURING_PLAN.md  COMPLETE_METAOBJECT_FETCH_RESULTS.md  GID_RESOLUTION_COMPLETE_REPORT.md  INSTALLATION.md  LAPTOP_COMPONENT_MAPPING_PLAN.md  LAPTOP_METAOBJECT_IMPLEMENTATION_PLAN.md  LAPTOP_SCALABILITY_REFACTOR_PLAN.md  MyByte-SpecGrab.ps1  MyByte-SpecGrabV1.ps1  PHASE_1_COMPREHENSIVE_TEST_REPORT.md  PHASE_2_TEST_REPORT.md  PROJECT_CONTEXT_SUMMARY.md  README.md  Run-MyByteSpec.cmd  SETUP_FIRST_TIME.bat  STOP_APP.bat  TECHNICAL_REFERENCE.md  analisacodebase.md  get_sim_carriers.py  handle_counter.json  install_windows.bat  investigate_color_discrepancy.py  iphone_template_system_prd.md  laptop_metaobjects_output.md  pyproject.toml  pytest.ini  requirements.txt  (+7 more)
.ai/: AGENT_UTILIZATION_GUIDE.md
.ai/agents/: GENERAL_RULES.md  code-quality-architect.md  product-strategy-advisor.md  shopify-api-developer.md  web-research-specialist.md
.ai/checklists/: CODE_REVIEW.md  PRE_CODING.md  PRE_COMMIT.md
.ai/context/: ARCHITECTURE_DECISIONS.md  CODEBASE_STATE.md  KNOWN_ISSUES.md  TECHNICAL_DEBT.md  WORK_LOG.md
.ai/patterns/: api_patterns.md  testing_patterns.md  ui_patterns.md
.ai/workflows/: bug_fixing.md  code_review.md  feature_implementation.md
.claude/agents/: code-quality-architect.md  product-strategy-advisor.md  shopify-api-developer.md  shopify-research-specialist.md  test-coverage-specialist.md  ux-design-specialist.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
admin/: missing_metaobjects_report.py
archive/: README.md  prd.md
archive/config/: dedicated_graphics_mapping_clean_20250730_022359.py  laptop_metafield_mapping_actual_20250805.py  laptop_metafield_mapping_complete.py  laptop_metafield_mapping_enhanced_20250805.py  laptop_specs_20250805.py
archive/old-documentation/: ARCHITECTURE.md  CODEBASE_RESTRUCTURING_PLAN.md  CONTRIBUTING.md  LAPTOP_SCALABILITY_REFACTOR_PLAN.md  STREAMLIT_CLOUD_DEPLOYMENT.md  SUB_AGENT_MIGRATION.md
archive/windows-installer/: START_APP.bat  run_app.bat
config/: color_metaobject_mapping.py  dedicated_graphics_mapping.py  galaxy_specs.py  iphone_specs.py  laptop_inclusions.py  laptop_metafield_mapping.py  laptop_metafield_mapping_actual.py  laptop_metafield_mapping_complete.py  laptop_metafield_mapping_enhanced.py  laptop_metafield_mapping_full.py  laptop_metafields.py  laptop_specs.py  master_data.py  shopify_config.py
data/analysis/: complete_gid_resolution_results.json  complete_metaobject_fetch_report_20250807_022617.json  component_mapping_validation.json  component_mapping_validation.md  component_name_standardization_report.json  e2e_integration_test.json  e2e_integration_test.md  mapping_update_report.md  metaobject_gid_fetch_raw_20250811_122014.json  metaobject_gid_fetch_report_20250811_122014.json  metaobject_gid_fetch_report_20250811_122014.md  metaobject_type_discovery_20250806_225455.json  metaobject_types_validation.json  missing_shopify_entries.md  phase3_comprehensive_validation_report.md  phase3_validation_summary.json  unmapped_components.json  unmapped_components.md
database/: handle_counter.py
docs/: ADDING_LAPTOP_MODELS.md  ARCHITECTURE.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md
domain/: __init__.py
fetchdata/: 01_Processor_metaobjects.md  03_Graphics_metaobjects.md  04_Display_metaobjects.md  05_Storage_metaobjects.md  06_VGA_metaobjects.md  07_OS_metaobjects.md
infrastructure/: __init__.py  error_handler.py
missing-components/: missing_display.md  missing_graphics.md  missing_processor.md  missing_vga.md
models/: laptop.py  smartphone.py
pages/: laptop_entry.py  smartphone_entry.py  smartphone_entry_enhanced.py
repositories/: __init__.py  metaobject_repository.py  product_data_repository.py  shopify_metaobject_repository.py  shopify_product_repository.py
scripts/: README.md  update_test_imports.py
services/: brand_import_service.py  collection_service.py  component_dropdown_service.py  enhanced_product_service.py  export_service.py  gid_resolution_service.py  image_service.py  laptop_metafield_service.py  metaobject_service.py  product_service.py  shopify_api.py  template_cache_service.py  template_display_service.py  validation_service.py
tests/: README.md  TEST_COVERAGE_REPORT.md  conftest.py  requirements.txt
utils/: handle_generator.py
(+94 files in other folders)
